@@ -1,0 +1,7 @@
+
+#ifndef __RE_SPLIT_H__
+#define __RE_SPLIT_H__
+
+int split (char *string, char *fields[], int nfields, char *sep);
+
+#endif
